<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/place_name"
        android:id="@+id/textViewPlaceName"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPlaceName"
        android:hint="@string/name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="textCapSentences" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/place_address"
        android:id="@+id/textViewPlaceAddress"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"  />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPlaceAddress"
        android:hint="@string/place_address"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPostalAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/optional_place_phone"
        android:id="@+id/textViewPlacePhone"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"  />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPlacePhone"
        android:hint="@string/place_phone"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="phone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/optional_website"
        android:id="@+id/textViewPlaceWeb"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"  />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPlaceWeb"
        android:hint="@string/place_website"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="textUri" />
</LinearLayout>